@@ -1,8 +1,8 @@
 /*
  * This file is part of makedict - convertor from any
- * dictionary format to any http://sdcv.sourceforge.net
+ * dictionary format to any http://xdxf.sourceforge.net
  *
- * Copyright (C) Evgeniy Dushistov, 2005
+ * Copyright (C) Evgeniy Dushistov, 2005-2006
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
@@ -19,6 +19,9 @@
  * Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.
  */
 
+/*
+ * parser of sdictionary format, see http://sdict.com/en/
+ */
 
 #ifdef HAVE_CONFIG_H
 #  include "config.h"
@@ -26,7 +29,6 @@
 
 #include <cerrno>
 #include <cstring>
-#include <fstream>
 #include <glib/gi18n.h>
 #include <map>
 #include <zlib.h>
@@ -43,6 +45,52 @@
 //#define TEST
 
 namespace sdict {
+
+	struct Header {
+		guint8 signature_[4];
+		guint8 lang_from_[3];
+		guint8 lang_to_[3];
+		guint8 compress_method_ : 4;
+	        guint8 index_level_: 4;
+		guint32 nwords_;
+		guint32 short_index_len_;
+		guint32 title_offset_;
+		guint32 copyright_offset_;
+		guint32 version_offset_;
+		guint32 short_index_offset_;
+		guint32 full_index_offset_;
+		guint32 articles_offset_;
+
+		void from_le_to_host() {
+			nwords_ = GUINT32_FROM_LE(nwords_);
+			short_index_len_ = GUINT32_FROM_LE(short_index_len_);
+			title_offset_ = GUINT32_FROM_LE(title_offset_);
+			copyright_offset_ = GUINT32_FROM_LE(copyright_offset_);
+			version_offset_ = GUINT32_FROM_LE(version_offset_);
+			short_index_offset_ = GUINT32_FROM_LE(short_index_offset_);
+			full_index_offset_ = GUINT32_FROM_LE(full_index_offset_);
+			articles_offset_ = GUINT32_FROM_LE(articles_offset_);
+		}
+#ifdef DEBUG
+		friend File& operator<<(File& out, const Header& head) {
+			out << "Articles offset: " << head.articles_offset_ << "\n";
+			return out;
+		}
+#endif
+	} __attribute__((packed));
+
+	struct FullIndexEntry {
+		guint16 next_word_;
+		guint16 prev_word_;
+		guint32 article_pointer_;
+
+		void from_le_to_host() {
+			next_word_ = GUINT16_FROM_LE(next_word_);
+			prev_word_ = GUINT16_FROM_LE(prev_word_);
+			article_pointer_ = GUINT32_FROM_LE(article_pointer_);
+		}
+	} __attribute__((packed));
+
 	class Parser : public ParserBase {
 	public:
 		Parser();
@@ -53,27 +101,20 @@ namespace sdict {
 			return g_str_has_suffix(url.c_str(), ".dct");
 		}
 	private:
-		enum {none, gzip, bzip2} compression_method;
+		enum CompressMethod { cmNONE = 0, cmGZIP = 1, cmBZIP2 = 2} compress_method_;
 		std::string title, copyright, version;
-		std::vector<char> data_buffer;
+		std::vector<char> databuf_;
+		StringMap langs_;
 
 		static Str2StrTable replace_table;
 		typedef std::map<char, char*, std::less<char> > Char2Str;
 		static  Char2Str text2xml;
-
 		static TagInfoList taginfo_list;
-		std::map<std::string, std::string> langs;
+		typedef std::map<std::string, guint32> ArticlesMap;
+		ArticlesMap articles_map_;
 
-		bool read_unit(std::ifstream& f, guint32 offset);
-		std::string convert_lang(const std::string& lang) {
-			std::string buf(lang);
-			tolower(buf);
-			std::map<std::string, std::string>::iterator it=langs.find(buf);
-			if (it == langs.end())
-				return "unkown language: " + lang;
-
-			return it->second;
-		}
+		bool read_unit(File& f, guint32 offset);
+		std::string convert_lang(const char *lang, size_t len);
 		void convert_article(std::string& encoded_data);
 	};
 	REGISTER_PARSER(Parser,sdict);
@@ -85,14 +126,30 @@ Str2StrTable Parser::replace_table;
 Parser::Char2Str Parser::text2xml;
 TagInfoList Parser::taginfo_list;
 
+std::string Parser::convert_lang(const char *lang, size_t len)
+{
+	char *res = (char *)memchr(lang, '\0', len);
+	if (res)
+		len = res - lang;
+	std::string buf(lang, len);
 
-Parser::Parser() : langs(langs_2to3, langs_2to3+langs_2to3_count)
+	tolower(buf);
+
+	StringMap::const_iterator it = langs_.find(buf);
+	if (it == langs_.end())
+		return "unkown language: " + buf;
+
+	return it->second;
+}
+
+Parser::Parser() : langs_(langs_2to3, langs_2to3 + langs_2to3_count)
 {
 	set_parser_info("format", "sdict");
-	set_parser_info("version", "sdict_parser, version 0.1");
+	set_parser_info("version", "sdict_parser, version 0.2");
 
-	parser_options_["lang_from"]="";
-	parser_options_["lang_to"]="";
+	parser_options_["lang_from"] = "";
+	parser_options_["lang_to"] = "";
+	parser_options_["remove-duplication"] = "no";
 
 	not_valid_chars.insert(0x02);
 	not_valid_chars.insert(0x03);
@@ -143,7 +200,7 @@ Parser::Parser() : langs(langs_2to3, langs_2to3+langs_2to3_count)
 void Parser::convert_article(std::string& encoded_data)
 {
 	Char2Str::iterator c2si;
-	const char *p = &data_buffer[0];
+	const char *p = &databuf_[0];
 	NormalizeTags norm_tags(taginfo_list);
 	while (*p) {
 		if (*p=='<') {
@@ -190,149 +247,71 @@ void Parser::convert_article(std::string& encoded_data)
 
 int Parser::parse(const std::string& filename)
 {
-	guint16 next_word, prev_word;
-	guint32 article_pointer, index_size;
-	guint32 wordcount, short_index_length;
-	guint32 title_offset, copyright_offset, version_offset,
-		short_index_offset, full_index_offset, articles_offset;
+	title = copyright = version = "";
+	articles_map_.clear();
+	bool dupl_mode = false;
 
-	title=copyright=version="";
-	int res=EXIT_FAILURE;
-	std::ifstream f(filename.c_str(), std::ios::binary | std::ios::in);
+	if (parser_options_["remove-duplication"] == "yes")
+		dupl_mode = true;
+
+	File f(fopen(filename.c_str(), "rb"));
 	if (!f) {
 		StdErr.printf(_("Can not open: %s\n"), filename.c_str());
-		return res;
+		return EXIT_FAILURE;
 	}
-	guint8 buffer[10];
-	if (!f.read((char *)buffer, sizeof(guint8)*4)) {
+
+	Header header;
+	if (!f.read((char *)&header, sizeof(header))) {
 		StdErr<<_("Corrupted dictionary or problem with hard disk\n");
-		return res;
+		return EXIT_FAILURE;
 	}
-	if (strncmp((char *)buffer, "sdct", 4)!=0) {
-		StdErr<<_("Signature did not match\n");
-		return res;
+
+	header.from_le_to_host();
+#ifdef DEBUG
+	StdOut << header;
+#endif
+	if (strncmp((const char *)header.signature_, "sdct", 4) != 0) {
+		StdErr << _("Signature did not match\n");
+		return EXIT_FAILURE;
 	}
-	if (!f.read((char *)buffer, sizeof(guint8)*3)) {
-		StdErr<<_("Corrupted dictionary or problem with hard disk\n");
-		return res;
-	}
-	buffer[3]=0;
+
 	if (parser_options_["lang_from"].empty())
-		set_dict_info("lang_from", convert_lang((char *)buffer));
+		set_dict_info("lang_from", convert_lang((const char *)header.lang_from_, 3));
 	else
 		set_dict_info("lang_from", parser_options_["lang_from"]);
 
-	if (!f.read((char *)buffer, sizeof(guint8)*3)) {
-		StdErr<<_("Corrupted dictionary or problem with hard disk\n");
-		return res;
-	}
-	buffer[3]=0;
 	if (parser_options_["lang_to"].empty())
-		set_dict_info("lang_to", convert_lang((char *)buffer));
+		set_dict_info("lang_to", convert_lang((const char *)header.lang_to_, 3));
 	else
 		set_dict_info("lang_to", parser_options_["lang_to"]);
-
-	if (!f.read((char *)buffer, sizeof(guint8))) {
-		StdErr<<_("Corrupted dictionary or problem with hard disk\n");
-		return res;
-	}
-	switch (buffer[0] & 0x0F) {
-	case 0:
-		compression_method=none;
-#ifdef DEBUG
-		StdOut<<"Compression method: none\n";
-#endif
+	compress_method_ = CompressMethod(header.compress_method_);
+	switch (compress_method_) {
+	case cmNONE:
+	case cmGZIP:
 		break;
-	case 1:
-		compression_method=gzip;
-#ifdef DEBUG
-		StdOut<<"Compression method: gzip\n";
-#endif
-		break;
-	case 2:
-		compression_method=bzip2;
-#ifdef DEBUG
-		StdOut<<_("Compression method: bzip2\n");
-#endif
+	case cmBZIP2:
 		//break; //TODO: bzip2 not supported yet
 	default:
-		StdErr.printf(_("Unkown compression method: %c\n"), char(buffer[0]));
-		return res;
-	}
-#ifdef DEBUG
-	StdOut.printf("Index level: %d\n", int(buffer[0] >> 4));
-#endif
-	if (!f.read((char *)&wordcount, sizeof(guint32))) {
-		StdErr<<_("Corrupted dictionary or problem with hard disk\n");
-		return res;
-	}
-#ifdef DEBUG
-	StdOut << "Amount of words: " << wordcount << "\n";
-#endif
-	if (!f.read((char *)&short_index_length, sizeof(guint32))) {
-		StdErr<<_("Corrupted dictionary or problem with hard disk\n");
-		return res;
-	}
-#ifdef DEBUG
-	StdOut << "Short index length: " << short_index_length << "\n";
-#endif
-
-	if (!f.read((char *)&title_offset, sizeof(guint32))) {
-		StdErr<<_("Corrupted dictionary or problem with hard disk\n");
-		return res;
+		StdErr.printf(_("Unkown compression method: %d\n"),
+			      int(header.compress_method_));
+		return EXIT_FAILURE;
 	}
 
-	if (!f.read((char *)&copyright_offset, sizeof(guint32))) {
-		StdErr<<_("Corrupted dictionary or problem with hard disk\n");
-		return res;
-	}
-	if (!f.read((char *)&version_offset, sizeof(guint32))) {
-		StdErr<<_("Corrupted dictionary or problem with hard disk\n");
-		return res;
-	}
-	if (!f.read((char *)&short_index_offset, sizeof(guint32))) {
-		StdErr<<_("Corrupted dictionary or problem with hard disk\n");
-		return res;
-	}
-#ifdef DEBUG
-	StdOut.printf("short_index_offset: %u\n", short_index_offset);
-#endif
-	if (!f.read((char *)&full_index_offset, sizeof(guint32))) {
-		StdErr<<_("Corrupted dictionary or problem with hard disk\n");
-		return res;
-	}
-#ifdef DEBUG
-	StdOut.printf("full_index_offset: %u\n", full_index_offset);
-#endif
-	if (!f.read((char *)&articles_offset, sizeof(guint32))) {
-		StdErr<<_("Corrupted dictionary or problem with hard disk\n");
-		return res;
-	}
-#ifdef DEBUG
-	StdOut.printf("article_offset: %u\n", articles_offset);
-#endif
-	if (!read_unit(f, title_offset))
-		return res;
-	title = &data_buffer[0];
-#ifdef DEBUG
-	StdOut << "Title: " << title << "\n";
-#endif
-	if (!read_unit(f, copyright_offset))
-		return res;
-	copyright = &data_buffer[0];
-#ifdef DEBUG
-	StdOut << "Copyright: " << copyright << "\n";
-#endif
-	if (!read_unit(f, version_offset))
-		return res;
-	version = &data_buffer[0];
-#ifdef DEBUG
-	StdOut << "Versioin: " << version << "\n";
-#endif
+	if (!read_unit(f, header.title_offset_))
+		return EXIT_FAILURE;
+	title = &databuf_[0];
 
-	if (!f.seekg(full_index_offset)) {
+	if (!read_unit(f, header.copyright_offset_))
+		return EXIT_FAILURE;
+	copyright = &databuf_[0];
+
+	if (!read_unit(f, header.version_offset_))
+		return EXIT_FAILURE;
+	version = &databuf_[0];
+
+	if (!f.seek(header.full_index_offset_)) {
 		StdErr << _("Corrupted dictionary or problem with hard disk\n");
-		return res;
+		return EXIT_FAILURE;
 	}
 	set_dict_info("full_name", title);
 	set_dict_info("description", std::string("Copyright: ")+copyright+"; Version: "+version);
@@ -340,35 +319,24 @@ int Parser::parse(const std::string& filename)
 	begin();
 
 	std::string encoded_data;
+	FullIndexEntry index_entry;
+	guint32 wordcount = header.nwords_;
+	size_t index_size;
 
 	for (gulong i = 0; i < wordcount; ++i) {
-#ifdef DEBUG
-		StdOut.printf("Parse %luth article, current offset %ld\n",
-			      i, long(f.tellg()));
-#endif
-		if (!f.read((char *)&next_word, sizeof(guint16))) {
-#ifdef DEBUG
-			StdOut.printf("current offset: %ld, error: %s\n",
-				      long(f.tellg()), strerror(errno));
-#endif
-			StdErr << _("Can not read next_word field\n");
-			return res;
-		}
-		if (!f.read((char *)&prev_word, sizeof(guint16))) {
-			StdErr << _("Can not read prev_word field\n");
-			return res;
-		}
-		if (!f.read((char *)&article_pointer, sizeof(guint32))) {
-			StdErr << _("Can not read article_pointer\n");
-			return res;
+		if (!f.read((char *)&index_entry, sizeof(index_entry))) {
+			StdErr << _("Can not read full index entry\n");
+			return EXIT_FAILURE;
 		}
 
-		index_size = next_word - sizeof(guint16) * 2 - sizeof(guint32);
+		index_entry.from_le_to_host();
+
+		index_size = index_entry.next_word_ - sizeof(index_entry);
 
 		std::vector<char> index_value(index_size + 1);
 		if (!f.read(&index_value[0], index_size)) {
 			StdErr << _("Can not read word/phrase\n");
-			return res;
+			return EXIT_FAILURE;
 		}
 		index_value[index_size] = '\0';
 		Char2Str::iterator c2si;
@@ -383,81 +351,112 @@ int Parser::parse(const std::string& filename)
 		}
 		remove_not_valid(encoded_index);
 
-		long cur_offset=f.tellg();
-		if (!read_unit(f, articles_offset+article_pointer)) {
+
+		if (!read_unit(f, header.articles_offset_ +
+			       index_entry.article_pointer_)) {
 			StdErr << _("Can not read article\n");
-			return res;
+			return EXIT_FAILURE;
 		}
 
-		encoded_data.resize(0);//may be this help clear std::string without free memory		
+		if (dupl_mode) {
+			ArticlesMap::const_iterator ami =
+				articles_map_.find(encoded_index);
+			if (ami != articles_map_.end()) {
+				std::vector<char> origin = databuf_;
+				if (!read_unit(f, header.articles_offset_ +
+					       ami->second)) {
+					StdErr << _("Can not read article\n");
+					return EXIT_FAILURE;
+				}
+				if (strcmp(&databuf_[0], &origin[0]) == 0) {
+					StdErr.printf(_("Warrning: Duplication of the `%s' article. "
+							"Skipped.\n"),
+						      encoded_index.c_str());
+					continue;
+				}
+				databuf_ = origin;
+			}
+			articles_map_[encoded_index] = index_entry.article_pointer_;
+		}
+		encoded_data.resize(0);//may be this help clear std::string without free memory
 		convert_article(encoded_data);
 #if 1
 		if (!g_utf8_validate(encoded_data.c_str(), gssize(-1), NULL)) {
 			StdErr << _("Article contains not valid utf-8 text data\n");
-			return res;
+			return EXIT_FAILURE;
 		}
 #endif
 
-		article(StringList(1, encoded_index), encoded_data);
-
-		f.seekg(cur_offset);
+		article(StringList(1, encoded_index), encoded_data);	
 	}
 
 
-	res = EXIT_SUCCESS;
-
-	return res;
+	return EXIT_SUCCESS;
 }
 
-bool Parser::read_unit(std::ifstream& f, guint32 offset)
+bool Parser::read_unit(File& f, guint32 offset)
 {
-  if (!f.seekg(offset)) {
-	  StdErr.printf(_("Can not set current position to: %u\n"), offset);
-	  return false;
-  }
-  guint32 record_size;
-  //FIXME: add reoder bytes in integer
-  if (!f.read((char *)&record_size, sizeof(guint32))) {
-    StdErr << _("Can not read unit size\n");
-    return false;
-  }
+	long cur_off = f.tell();
+	if (cur_off == -1) {
+		StdErr.printf(_("Can not get current positions in the file: %s\n"),
+			      strerror(errno));
+		return false;
+	}
 
-  if (data_buffer.size() < record_size+1)
-    data_buffer.resize(record_size + 1);
+	if (!f.seek(offset)) {
+		StdErr.printf(_("Can not set current position to: %u\n"), offset);
+		return false;
+	}
+	guint32 record_size;
+	
+	if (!f.read((char *)&record_size, sizeof(guint32))) {
+		StdErr << _("Can not read unit size\n");
+		return false;
+	}
 
-  if (!f.read(&data_buffer[0], record_size)) {
-    StdErr << _("Can not read unit data\n");
-    return false;
-  }
+	record_size = GUINT32_FROM_LE(record_size);
+	
+	if (databuf_.size() < record_size+1)
+		databuf_.resize(record_size + 1);
+	
+	if (!f.read(&databuf_[0], record_size)) {
+		StdErr << _("Can not read unit data\n");
+		return false;
+	}
+	
+	if (compress_method_ == cmGZIP) {
+		std::vector<char> dest(record_size * 4);
+		uLongf dest_len;
+		for(;;) {
+			dest_len = dest.size();
+			int res = uncompress((Bytef *)&dest[0], (uLongf *)&dest_len,
+					     (Bytef *)&databuf_[0], record_size);
+			
+			if (Z_OK == res)
+				break;
+			if (Z_BUF_ERROR == res) {
+				dest.resize(dest.size() + record_size);
+				continue;
+			}
+			
+			return false;
+		}
+		
+		databuf_ = dest;
+		
+		if (databuf_.size() <= dest_len + 1)
+			databuf_.resize(dest_len + 1);
+		databuf_[dest_len] = '\0';
+	} else
+		databuf_[record_size] = '\0';
 
-  if (compression_method == gzip) {
-	  std::vector<char> dest(record_size * 4);
-	  uLongf dest_len;
-	  for(;;) {
-		  dest_len = dest.size();
-		  int res = uncompress((Bytef *)&dest[0], (uLongf *)&dest_len,
-				       (Bytef *)&data_buffer[0], record_size);
+	if (!f.seek(cur_off)) {
+		StdErr.printf(_("Can not set position in the file to %ld: %s\n"),
+			      cur_off, strerror(errno));
+		return false;
+	}	
 
-		  if (Z_OK == res)
-			  break;
-		  if (Z_BUF_ERROR == res) {
-			  dest.resize(dest.size() + record_size);
-			  continue;
-		  }
-
-		  return false;
-	  }
-
-	  data_buffer = dest;
-
-	  if (data_buffer.size() <= dest_len + 1)
-		  data_buffer.resize(dest_len + 1);
-	  data_buffer[dest_len] = '\0';
-  } else {
-    data_buffer[record_size] = '\0';
-  }
-
-  return true;
+	return true;
 }
 
 #if 0
