@@ -1,0 +1,31 @@
+<?xml version="1.0" encoding="UTF-8" ?>
+<!DOCTYPE xdxf SYSTEM "http://xdxf.sourceforge.net/xdxf_lousy.dtd">
+<xdxf lang_from="ENG" lang_to="ENG" format="visual">
+<full_name>Sample 2 test dictionary</full_name>
+<description>Copyright: GNU Public License.; Version: 0.1</description>
+<ar><k>a</k>
+a</ar>
+<ar><k>a (2)</k>
+a</ar>
+<ar><k>b</k>
+b</ar>
+<ar><k>utf8-sample</k>
+
+Finnish:
+Hyvää päivää!
+
+Greek:
+Σὲ γνωρίζω ἀπὸ τὴν κόψη
+
+Georgian:
+გთხოვთ ახლავე გაიაროთ რეგის
+
+Russian:
+Зарегистрируйтесь сейчас на
+
+Thai
+๏ แผ่นดินฮั่นเสื่อม
+
+Runes
+  ᚻᛖ ᚳᚹᚫᚦ ᚦᚫᛏ</ar>
+</xdxf>
